# renovate-poetry-fails-semver

./: README.md  pyproject.toml
.github/workflows/: renovate.yaml
